--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h3>Git</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, architecto quia, sit nihil, earum at atque culpa impedit nostrum quod aliquid sunt laudantium veritatis maiores asperiores velit minima. Molestiae, omnis.</p>
 </body>
 </html>
