Camabiando el titulo y agregando una lista

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Git - Alura</title>
 </head>
 <body>
     <h3>Git</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, architecto quia, sit nihil, earum at atque culpa impedit nostrum quod aliquid sunt laudantium veritatis maiores asperiores velit minima. Molestiae, omnis.</p>
+        
+        <ul>
+            <li>Item 1</li>
+        </ul>
 </body>
 </html>
